# sentinel-sage

./: .env.example  .gitignore  README.md  pyproject.toml
config/: default.toml
src/sent_sage/: __init__.py  __main__.py  cli.py  config.py
src/sent_sage/agents/: test_agent.py
src/sent_sage/ui/: app.py
src/sent_sage/ui/css/: main.css
src/sent_sage/ui/screens/: home.py
