# tells pip how to build package
# package.setuptools is the most common backend
[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.backends._legacy:_Backend"

# Project metadata
[project]
name = "sentinel-and-sage"
version = "0.1.0"
description = "Dual-agent CLI tool for threat analysis and pentesting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Rift", email = "videreastrum@gmail.com" },
]

keywords = ["security", "pentester_tools", "analysis", "agent", "cli"]

# 
dependencies = [
    "claude-agent-sdk>=0.1.50",
    "textual>=1.0.0", # UI driver
    "httpx>=0.27.0",
    "tomli<2.0.0;python_version<'3.11'",
    "tomlib>=0.0.0;python_version<'3.11'",
    "pydantic>=2.0.0",
    "rich>=13.0.0", # used for pretty cli output; bundled with textual
]

# dev dependencies
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

# Makes `sent-and-sage` a CLI command to entry point 
[project.scripts]
sent-and-sage = "sentinel_sage.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"